p3/confs/argocd/argocd_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.localhost`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: https-redirect
    - kind: Rule
      match: Host(`argocd.localhost`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
      middlewares:
        - name: https-redirect
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
